
* Added SSL suport.

* jquery updated to v1.9.1.

* Fixed bug with multiple click events on f3 and f4 buttons.

* Added ability to move files.

* Added ability to degradate to http from https.

* Fixed bug of multiple call of sockets.

* If create directory command executed - loading spinner
would be on top.

* Refactored getShortSize.

* Added update of size on file changing in editor.


2012.03.01, Version 0.1.9

* Changed the way of getting github application id
(now it's just from config, rest api removed).

* Added ability to upload files to GDrive.

* Added functions DOM.getCurrentFileContent(pCallBack [, pCurrentFile])
and Util.setTimeout(pFunction [, pCallBack, pTime])

* Added functions in win.js for parsing diskpart output.

* Added function getCurrentDir to DOM module.

* Fixed bug with terminal load.

* From now api url on client readed from config.json.

* If choosen upload to -> Gist, and file in json have
not '.json' extension, it's added to the and of filename.

* Fixed bug in not fully functional browsers,
jquery loaded after ie.js, should be before.

* Fixed bug with closing terminal and opening viewer:
inside event function varible called event do not exist
(everithing ok on webkit).

* Added ability to upload files to dropbox.

* Added ability to authorize on github thru new window,
changed redirecting url to /auth and added rout function
to cloudcmd.js

* DropBox, GDrive and GitHub modules now look the same.

* Fixed bug with pressing Esc when menu showed.
We could not to now, when key was pressed becaouse of
stopPropogation function in jquery.contextMenu module.
Commented stopPropogration.
```
keyStop: function(e, opt) {
    if (!opt.isInput) {
        e.preventDefault();
    }
        
    //e.stopPropagation();
}
```
* Updated socket.io to v0.9.13.

* Updated jquery-terminal to v0.4.22.

* Refactore viewer module.

* Removed loading spinner by commenting jquery.fancybox.css block
#fancybox-loading div {
    width: 44px;
	height: 44px;