@@ -194,15 +194,13 @@
                     
                     main.sendFile({
                         name        : lSendName,
+                        cache       : lConfig.cache,
                         gzip        : true,
                         request     : pReq,
                         response    : pRes
                     });
             }, function(pCallBack){
                 Minify.optimize(lName, {
-                    gzip        : true,
-                    request     : pReq,
-                    response    : pRes,
                     callback    : pCallBack,
                     returnName  : true
                 });
