@@ -192,7 +192,6 @@
             
             
             lRet = {
-                'Access-Control-Allow-Origin': '*',
                 'Content-Type': lType + lContentEncoding,
                 'last-modified': new Date().toString(),
                 'Vary': 'Accept-Encoding'
@@ -233,6 +232,7 @@
             
             p.response.writeHead(OK, generateHeaders({
                 name    : p.name,
+                cache   : p.cache,
                 gzip    : lGzip,
                 query   : getQuery(p.request)
             }) );
@@ -271,6 +271,7 @@
                 lGzip       = isGZIP(p.request),
                 lHead       = generateHeaders({
                     name    : p.name,
+                    cache   : p.cache,
                     gzip    : lGzip,
                     query   : lQuery
                 });
